--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "main": "index.js",
   "dependencies": {
     "browserify-middleware": "^4.1.0",
-    "express": "^4.10.7"
+    "express": "^4.10.7",
+    "gl-matrix": "^2.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "mocha": "^2.1.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha test/**/*.js"
   },
   "repository": {
     "type": "git",
