--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "falling sand simulation",
   "main": "index.js",
   "dependencies": {
+    "brfs": "^1.2.0",
     "browserify-middleware": "^4.1.0",
     "express": "^4.10.7",
     "gl-matrix": "^2.1.0",
-    "helixjs": "^1.0.3"
+    "helix-loop": "^1.0.4"
   },
   "devDependencies": {
     "chai": "^1.10.0",
